tests/resource/valid/operation/type_alias_primitive.mamba
type MyType: String

def a: MyType := "my_string"
print(a)
