tests/resource/invalid/type/control_flow/access_match_arms_variable.mamba
match 10
    n =>
        print("10")

print(n)
